crates/vize_atelier_jsx/tests/snapshots/adversarial_snapshots__tsx_syntax_edges_dom.snap
---
source: crates/vize_atelier_jsx/tests/adversarial_snapshots.rs
expression: "dom_output_summary(source, &output)"
---
DomOutputSummary {
    diagnostics: [],
    components: [
        RenderComponentSummary {
            name: Some(
                "GenericList",
            ),
            mode: "Vdom",
            preamble: Some(
                "import { resolveComponent as _resolveComponent, toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, createCommentVNode as _createCommentVNode, renderList as _renderList } from \"vue\"\n",
            ),
            code: "export function render(_ctx, _cache) {\n  const _component_List = _resolveComponent(\"List\")\n  \n  return (_openBlock(), _createElementBlock(_Fragment, null, [\n    _createVNode(_component_List, { items: items }, null, 8 /* PROPS */, [\"items\"]),\n    _createElementVNode(\"input\", {\n      ref: inputRef,\n      value: items[0]?.key\n    }, null, 520 /* PROPS, NEED_PATCH */, [\"value\"]),\n    (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(items, ({ key, value }, index) => {\n      return (value)\n        ? (_openBlock(), _createElementBlock(\"output\", { key: 0 }, _toDisplayString(`${index}:${key}`), 1 /* TEXT */))\n        : (_openBlock(), _createElementBlock(\"small\", { key: 1 }, _toDisplayString(key), 1 /* TEXT */))\n    }), 256 /* UNKEYED_FRAGMENT */))\n  ], 64 /* STABLE_FRAGMENT */))\n}",
            templates: [],
            scoped_style: None,
        },
    ],
}
