crates/vize_atelier_jsx/tests/snapshots/adversarial_snapshots__tsx_syntax_edges_vapor.snap
---
source: crates/vize_atelier_jsx/tests/adversarial_snapshots.rs
expression: "vapor_output_summary(source, &output)"
---
VaporOutputSummary {
    diagnostics: [],
    components: [
        RenderComponentSummary {
            name: Some(
                "GenericList",
            ),
            mode: "Vapor",
            preamble: None,
            code: "import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, createTemplateRefSetter as _createTemplateRefSetter, createKeyedFragment as _createKeyedFragment, setValue as _setValue, renderEffect as _renderEffect, createIf as _createIf, createFor as _createFor, template as _template } from 'vue';\nconst t0 = _template(\"<input>\")\nconst t1 = _template(\"<output> </output>\")\nconst t2 = _template(\"<small> </small>\")\n\nexport function render(_ctx) {\n  const _setRef = _ctx.vaporTemplateRefSetter || _createTemplateRefSetter()\n  const _component_List = _resolveComponent(\"List\")\n  const n0 = _createComponentWithFallback(_component_List, { items: () => (items) }, null, true)\n  const n1 = t0()\n  const n2 = _createFor(() => (items), (_for_item0, _for_key0) => {\n    const n4 = _createIf(() => (_for_item0.value.value), () => {\n      const n6 = _createKeyedFragment(() => (_for_item0.value.key), () => {\n        const n7 = t1()\n        const x7 = _txt(n7)\n        _renderEffect(() => _setText(x7, _toDisplayString(`${_for_key0.value}:${_for_item0.value.key}`)))\n        return n7\n      })\n      return n6\n    }, () => {\n      const n9 = _createKeyedFragment(() => (_for_item0.value.key), () => {\n        const n10 = t2()\n        const x10 = _txt(n10)\n        _renderEffect(() => _setText(x10, _toDisplayString(_for_item0.value.key)))\n        return n10\n      })\n      return n9\n    })\n    return n4\n  })\n  _setRef(n1, inputRef!)\n  _renderEffect(() => _setValue(n1, (items[0]?.key as string) satisfies string))\n  return [n0, n1, n2]\n}\n",
            templates: [
                "<input>",
                "<output> </output>",
                "<small> </small>",
            ],
            scoped_style: None,
        },
    ],
}
